--- a/08.html
+++ b/08.html
@@ -5,9 +5,16 @@
     */
     
     //ENTRADA
+    let num = 1
+    let soma = 0;
+    while(num !== 0){
+        num = Number(prompt(`Informe números sucessivamente, separadamenre:`));
+        soma +=num
+    }
 
 
     //PROCESSAMENTO
+    document.write(`A soma dos números informados é ${soma}.`);
 
 
     //SAÍDA
