--- a/07.html
+++ b/07.html
@@ -16,48 +16,68 @@
     let idade = 1;
     let somaSalarios = 0;
     let maiorIdade = 0;
-    let menorIdade = 0;
-    let menorSalario = 0;
+    let menorIdade = Infinity;
+    let menorSalario = Infinity;
     let mulheres = 0;
     let quantSalarios = 0;
     let idadeMenorSalario = 0;
     let sexoMenorSalario = '';
     while(idade>=0){
-        let idade = Number(prompt(`Informe a idade da pessoa:`));
+        idade = Number(prompt(`Informe a idade da pessoa:`));
+
+        if (idade < 0) break;
+
         let sexo = prompt(`Informe o sexo da pessoa:`).toUpperCase();
         while(sexo !== "M"&& sexo !== "F"){
             sexo = prompt(`Informe o sexo da pessoa:`).toUpperCase()
         }
         let salario = Number(prompt(`Informe seu salário:`).replace(",", "."));
+        while(isNaN(salario) || salario < 0){
+            salario = Number(prompt(`Informe o seu salário:`).replace(",", "."));
+        }
 
-        if(idade>=maiorIdade){
-            maiorIdade = 0; 
-            maiorIdade+=idade
+        if(idade>-1){
+            if(idade>=maiorIdade){
+            maiorIdade = idade
         }
         if(idade<=menorIdade){
-            menorIdade = 0;
-            menorIdade+=idade;
+            menorIdade =idade;
         }
         if(salario<=menorSalario){
-            menorSalario = 0;
+            menorSalario = salario;
             idadeMenorSalario = idade;
             sexoMenorSalario = sexo;
         }
         if(sexo === "F"){
             mulheres++
         }
-        quantSalarios++
+
+            quantSalarios++
         somaSalarios+=salario
+
+        }
+        
     }
-    const mediaSalarios = somaSalarios/quantSalarios;
+    let mensagem;
+    if(quantSalarios>0){
+        let mediaSalarios = somaSalarios/quantSalarios;
+            mensagem = `a) A média dos salários do grupo é R$${mediaSalarios.toFixed(2).replace(".", ",")}.<br>
+    b) A maior idade é ${maiorIdade} e a menor idade é ${menorIdade}.<br>
+    c) A quantidade de mulheres na região é ${mulheres}.<br>
+    d) A idade e o sexo da pessoa que possue o menor salário é, ${idadeMenorSalario} anos e do sexo ${sexoMenorSalario}. `
+
+    } else{
+            mensagem = `a) A média dos salários resulta em R$0,00, porque as informações recebidas ou foram inválidas, ou a soma dos salários é R$0.<br>
+    b) A maior idade é ${maiorIdade} e a menor idade é ${menorIdade}.<br>
+    c) A quantidade de mulheres na região é ${mulheres}.<br>
+    d) A idade e o sexo da pessoa que possue o menor salário é, ${idadeMenorSalario} anos e do sexo ${sexoMenorSalario}. `
+    }
+    
 
 
     //PROCESSAMENTO
 
-    document.write(`a) A média dos salários do grupo é R$${mediaSalarios.toFixed(2).replace(".", ",")}.<br>
-    b) A maior idade é ${maiorIdade} e a menor idade é ${menorIdade}.<br>
-    c) A quantidade de mulheres na região é ${mulheres}.<br>
-    d) A idade e o sexo da pessoa que possue o menor salário é, ${idadeMenorSalario} anos e do sexo ${sexoMenorSalario}. `)
+    document.write(mensagem);
 
 
     //SAÍDA
