--- a/09.html
+++ b/09.html
@@ -5,9 +5,21 @@
     */
 
     //ENTRADA
+    let numAleatorio = Math.floor(Math.random() * 30) + 1;
+    let numInformado = 0;
+    while (numInformado !== numAleatorio){
+        numInformado= Number(prompt(`Informe um número:`));
+
+        if(numInformado>numAleatorio){
+            alert(`menor`);
+        } else if(numInformado<numAleatorio){
+            alert(`maior`);
+        }
+    }
 
 
     //PROCESSAMENTO
+    document.write(`Parabéns, você acertou o número. Era o número ${numAleatorio}.`);
 
 
     //SAÍDA
